force-app/main/default/objects/cdcpc__RD_PTCCrossRef__c/cdcpc__RD_PTCCrossRef__c.object-meta.xml
<CustomObject>
    <label>RD PTCCrossRef</label>
    <nameField>
        <label>RD PTCCrossRef</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD PTCCrossRef</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>