force-app/main/default/objects/cdcpc__RD_PTCCrossRef__c/fields/cdcpc__PTC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PTC__c</fullName>
    <label>PTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>