force-app/main/default/objects/cdcpc__RD_PTCCrossRef__c/fields/cdcpc__RefPTC1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RefPTC1__c</fullName>
    <label>RefPTC1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>