force-app/main/default/objects/cdcpc__RD_PTCCrossRef__c/fields/cdcpc__RefPTC5__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RefPTC5__c</fullName>
    <label>RefPTC5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>